tests/fail/DivisionAssign.java
package fail;
import java.lang.System;

public class DivisionAssign {
    public static void main(String[] args) {
        char test_var = 'a';
        System.out.println(test_var /= 42);
    }
}